--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <body>
     <h1>The new Github Webpage</h1>
-    <p>All github related activity will be auto posted here upon update</p>
+    <p>This is just a test</p>
+    <p>Don't think it is going to work though</p>
 </body>
 
 </html>
